--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 <nav>Research Interests:</nav>
 <section>
 	<div><b>Machine Learning:</b> &emsp;Large Language Models, &emsp;Natural Language Processing.</div>
-	<div><b>AI for Life Sciences:</b> &emsp;AIDD, &emsp;Nanobodies, &emsp;Personalized Tumor Vaccines.</div>
+	<div><b>AI for Life Sciences:</b> &emsp;AIDD, &emsp;Nanobodies, &emsp;Personalized Cancer Vaccines.</div>
 	<div><b>Quantum Computing:</b> &emsp;Quantum Cognition, &emsp;Quantum Machine Learning.</div>
 </section>
 
