--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 	
 	<!-- Published as participating author -->
 	<p>Published as General Author:</p>
+	<div data-level="CCF-A">Ziqiang Liu, Bowen Li, Zhenyu Xu, yantao li, <b>Junwei Zhang</b>, et al. CLM-access: A Specialized Foundation Model for High-dimensional Single-cell ATAC-seq analysis. In IJCAI, 2026.</div>
 	<div data-level="CCF-A">Di Jin, Jun Yang, Xiaobao Wang, <b>Junwei Zhang</b>, et al. A Dynamic Knowledge Update-Driven Model with Large Language Models for Fake News Detection. In IJCAI, 2025: 3000-3008.</div>
 	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signal guided Event Detection. In DASFAA, 2023: 572-581.</div>
 	<div data-level="CCF-C">Ruifang He, Mengnan Xiao, Jinsong Ma, <b>Junwei Zhang</b>, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
