--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 	
 	<!-- Published as participating author -->
 	<p>Published as General Author:</p>
-	<div data-level="CCF-A">Ziqiang Liu, Bowen Li, Zhenyu Xu, yantao li, <b>Junwei Zhang</b>, et al. CLM-access: A Specialized Foundation Model for High-dimensional Single-cell ATAC-seq analysis. In IJCAI, 2026.</div>
+	<div data-level="CCF-A">Ziqiang Liu, Bowen Li, Zhenyu Xu, Yantao Li, <b>Junwei Zhang</b>, et al. CLM-access: A Specialized Foundation Model for High-dimensional Single-cell ATAC-seq analysis. In AAAI, 2026.</div>
 	<div data-level="CCF-A">Di Jin, Jun Yang, Xiaobao Wang, <b>Junwei Zhang</b>, et al. A Dynamic Knowledge Update-Driven Model with Large Language Models for Fake News Detection. In IJCAI, 2025: 3000-3008.</div>
 	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signal guided Event Detection. In DASFAA, 2023: 572-581.</div>
 	<div data-level="CCF-C">Ruifang He, Mengnan Xiao, Jinsong Ma, <b>Junwei Zhang</b>, et al. Dual-Prompting Interaction with Entity Representation Enhancement for Event Argument Extraction. In NLPCC, 2023: 161-172.</div>
@@ -119,8 +119,8 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型的词义消歧方法、设备及存储介质. 公开号: <a href="https://qnlp.github.io/patents/CN118052226A.pdf" download>CN118052226A</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 一种基于类量子非同源表征约束的词义消歧方法. 公开号: <a href="https://qnlp.github.io/patents/CN119830903A.pdf" download>CN119830903A</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 一种挖掘特征间强相关性的类量子多层感知方法. 公开号: <a href="https://qnlp.github.io/patents/CN119830983A.pdf" download>CN119830983A</a>.</div>
-	<div>李晓林, 王赟松, <b>张俊伟</b> 等. 一种基于动态子图检索的大语言模型幻觉检测方法. 公开号: <a href="https://qnlp.github.io/patents/CN119830983A.pdf" download>CN119830983A</a>.</div>
-	<div>李晓林, 胡帅怿, <b>张俊伟</b> 等. 一种基于演绎逻辑机制的大语言模型幻觉检测方法. 公开号: <a href="https://qnlp.github.io/patents/CN119830983A.pdf" download>CN119830983A</a>.</div>
+	<div>李晓林, 王赟松, <b>张俊伟</b>, 等. 一种基于动态子图检索的大语言模型幻觉检测方法. 公开号: <a href="https://qnlp.github.io/patents/CN119830983A.pdf" download>CN119830983A</a>.</div>
+	<div>李晓林, 胡帅怿, <b>张俊伟</b>, 等. 一种基于演绎逻辑机制的大语言模型幻觉检测方法. 公开号: <a href="https://qnlp.github.io/patents/CN119830983A.pdf" download>CN119830983A</a>.</div>
 </section>
 
 
