--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 	<div><b>张俊伟</b>, 李晓林. 一种基于量子干涉模型的词义消歧方法、设备及存储介质. 公开号: <a href="https://qnlp.github.io/patents/CN118052226A.pdf" download>CN118052226A</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 一种基于类量子非同源表征约束的词义消歧方法. 公开号: <a href="https://qnlp.github.io/patents/CN119830903A.pdf" download>CN119830903A</a>.</div>
 	<div><b>张俊伟</b>, 李晓林. 一种挖掘特征间强相关性的类量子多层感知方法. 公开号: <a href="https://qnlp.github.io/patents/CN119830983A.pdf" download>CN119830983A</a>.</div>
+	<div>李晓林, 胡帅怿, <b>张俊伟</b>, 等. 基于演绎逻辑机制的大语言模型幻觉检测方法. 申请号: <a href="https://qnlp.github.io/patents/202511731846.7.pdf" download>202511731846.7</a>.</div>
 	<div>李晓林, 王赟松, <b>张俊伟</b>, 等. 一种基于动态子图检索的大语言模型幻觉检测方法.</div>
-	<div>李晓林, 胡帅怿, <b>张俊伟</b>, 等. 一种基于演绎逻辑机制的大语言模型幻觉检测方法. 申请号: <a href="https://qnlp.github.io/patents/202511731846.7.pdf" download>202511731846.7</a>.</div>
 </section>
 
 
