--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 <nav>Technical Standards:</nav>
 <section>
 	<div>团体标准. 预防用 mRNA 疫苗早期临床研究规范, 发布号: T/CIET 1931-2025, 发布时间: 2025-11-25.</div>
-	<div>团体标准. mRNA肿瘤疫苗开发与应用指南, 标准编号: T/CABC 15—2025, 发布日期: 2025-09-20.</div>
+	<div>团体标准. mRNA肿瘤疫苗开发与应用指南, 发布号: T/CABC 15—2025, 发布时间: 2025-09-20.</div>
 </section>
 	
 
