--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ He earned his Ph.D. from the College of Intelligence and Computing at Tianjin Un
 He is a professional member of the China Computer Federation (CCF) and the Chinese Association for Artificial Intelligence (CAAI), and is recognized as a high-level talent in Hangzhou City. 
 His current research pursuits encompass Quantum Machine Learning, Natural Language Processing, Large Language Models, and Al for Life Sciences. 
 Throughout his career, Junwei has published more than ten academic papers as the first author at esteemed artificial intelligence conferences such as AAAI, ECAI, and CIKM. 
-He has secured multiple invention patents, applied for several software copyrights (such as the self-developed academic club and bioinformatics tool platform, <a href="https://scholar.club/">ScholarClub</a>, <a href="https://lifescience.studio/">LifeStudio</a>), and served as a reviewer for reputable journals and conferences including AAAI, IJCAI, ECAI, EMNLP, and DASFAA.
+He has secured multiple invention patents and group standards, applied for several software copyrights (such as the self-developed academic club and bioinformatics tool platform, <a href="https://scholar.club/">ScholarClub</a>, <a href="https://lifescience.studio/">LifeStudio</a>), and served as a reviewer for reputable journals and conferences including AAAI, IJCAI, ECAI, EMNLP, and DASFAA.
 Additionally, he has worked in-depth with leading companies in the industry, such as Alibaba and ByteDance, to establish a mature industry-university-research cooperation model.
 </section>
 
