--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ Additionally, he has worked in-depth with leading companies in the industry, suc
 <!--所获荣誉和奖项-->
 <nav>Honors and Awards:</nav>
 <section>
+	<div>浙江省“万人计划”青年拔尖人才.</div>
 	<div>中国科学院杭州医学研究所 2024年度优秀员工.</div>
 </section>
 	
